# django-ses-sns-tracker

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  manage.py  pyproject.toml  requirements-dev.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: code_style.yml  create_release.yml  publish_release_on_pypi.yml  publish_release_packages.yml
example_proj/: settings.py  urls.py  wsgi.py
ses_sns_tracker/: __init__.py  admin.py  apps.py  backends.py  managers.py  models.py  signals.py  urls.py  utils.py  views.py
ses_sns_tracker/migrations/: 0001_initial.py  0002_alter_sesmaildelivery_options.py  0003_auto_20220322_0945.py  0004_alter_sesmaildelivery_id.py
tests/: settings.py  test_fake_delivery.py  urls.py
