[tool.poetry]
name = "django-ses-sns-tracker"
version = "3.0.0"
description = "Simple wrapper around django-ses to receive and persist sns event data"
authors = ["anfema GmbH <contact@anfe.ma>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/anfema/django-ses-sns-tracker"
classifiers = [
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Operating System :: OS Independent",
]
packages = [
    { include = "ses_sns_tracker" },
]

[tool.poetry.dependencies]
python = "^3.8"
django-ses = {version = "^3.5.2", extras = ["events"]}
requests = "*"
cryptography = { version = "*", optional = true }

[tool.poetry.extras]
cryptography = ["cryptography"]

[tool.poetry.group.dev.dependencies]
Django = "*"
psycopg2 = "*"
coverage = "*"
tox = "*"
boto3 = "^1.33.6"  # required speed up dependency resolution

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
