[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:report]
fail_under = 100

[flake8]
extend-exclude = locale,templates,migrations
max-line-length = 120

[isort]
line_length=120
lines_after_imports = 2
known_first_party = ses_sns_tracker
known_django = django
sections = FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
skip=migrations
