# legacy config; move to pyproject.toml when possible

[metadata]
name = django-ses-sns-tracker
version = 3.0.0
author = anfema GmbH
author_email = contact@anfe.ma
description = Simple wrapper around django-ses to receive and persist sns event data
long_description = file:README.md
long_description_content_type = text/markdown
license= MIT
license_files = LICENSE
url = https://github.com/anfema/django-ses-sns-tracker
classifiers =
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
test_suite = runtests.run_tests

[options]
python_requires = >=3.6
packages = find:
install_requires =
    django_ses>=2.0
    requests

[options.extras_require]
cryptography = cryptography

[options.packages.find]
exclude =
    example_proj
    example_proj.*
    tests
    tests.*

[coverage:report]
fail_under = 100

[flake8]
extend-exclude = locale,templates,migrations
max-line-length = 120
